--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="24dp"
     android:orientation="vertical"
@@ -10,29 +10,43 @@
 
 
     <ImageView
+        android:id="@+id/Login"
         android:layout_width="match_parent"
         android:layout_height="120dp"
-        android:src="@drawable/ic_login"/>
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="39dp"
+        android:src="@drawable/ic_login" />
 
     <EditText
+        android:id="@+id/Username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
-        android:hint="usename "/>
+        android:layout_below="@+id/Login"
+        android:layout_marginTop="30dp"
+        android:hint="usename " />
 
     <EditText
+        android:id="@+id/password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Password "/>
+        android:layout_below="@+id/Username"
+        android:layout_marginTop="17dp"
+        android:hint="Password " />
 
     <Button
+        android:id="@+id/btnLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:text="login"/>
+        android:layout_below="@+id/password"
+        android:layout_marginTop="97dp"
+        android:text="login" />
+
+    <ProgressBar
+        android:id="@+id/pbLogin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        
 
 
-
-
-
-</androidx.appcompat.widget.LinearLayoutCompat>
+</RelativeLayout>
